Switch back to plain setuptools, packaging tweaks
setup.py will now try to install as many of the extensions
as possible

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,1 @@
-include setup.py README.rst MANIFEST.in LICENSE distribute_setup.py
-global-exclude *~
+include setup.py README.rst MANIFEST.in LICENSE ez_setup.py
