Add unittest2 and pip to tox deps
This seems to be required for pypy to work correctly

--- a/tox.ini
+++ b/tox.ini
@@ -5,5 +5,7 @@ envlist = py26,py27,pypy
 deps = nose
        mock
        ccm
+       unittest2
+       pip
 commands = {envpython} setup.py build_ext --inplace
            nosetests tests/unit/
