Add integration tests to tox, related fixes

--- a/tox.ini
+++ b/tox.ini
@@ -7,5 +7,6 @@ deps = nose
        ccm
        unittest2
        pip
+       PyYAML
 commands = {envpython} setup.py build_ext --inplace
-           nosetests tests/unit/
+           nosetests tests/unit/ tests/integration/standard/
