Only run unit tests in tox for now

--- a/tox.ini
+++ b/tox.ini
@@ -9,4 +9,4 @@ deps = nose
        pip
        PyYAML
 commands = {envpython} setup.py build_ext --inplace
-           nosetests --verbosity=2 tests/unit/ tests/integration/standard/
+           nosetests --verbosity=2 tests/unit/
