Initial migration to python 3 support

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
-envlist = py26,py27,pypy
+envlist = py26,py27,pypy,py33
 
 [testenv]
 deps = nose
        mock
-       ccm
-       unittest2
+;       ccm
+;       unittest2
        pip
        PyYAML
 commands = {envpython} setup.py build_ext --inplace
