--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,13 @@ env:
   - TOX_ENV=py26
   - TOX_ENV=py27
   - TOX_ENV=pypy
+  - TOX_ENV=py33
 
 before_install:
   - sudo apt-get update -y
   - sudo apt-get install -y build-essential python-dev
   - sudo apt-get install -y libev4 libev-dev
+
 install:
   - pip install tox
 
