--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,15 @@ envlist = py26,py27,pypy,py33
 [testenv]
 deps = nose
        mock
-;       ccm
-;       unittest2
+       ccm
+       unittest2
        pip
        PyYAML
 commands = {envpython} setup.py build_ext --inplace
            nosetests --verbosity=2 tests/unit/
+
+[testenv:py33]
+deps = nose
+       mock
+       pip
+       PyYAML
