--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ deps = nose
        unittest2
        pip
        PyYAML
+       six
 commands = {envpython} setup.py build_ext --inplace
            nosetests --verbosity=2 tests/unit/
 
@@ -16,3 +17,4 @@ deps = nose
        mock
        pip
        PyYAML
+       six
