--- a/tox.ini
+++ b/tox.ini
@@ -8,5 +8,6 @@ deps = nose
        unittest2
        pip
        PyYAML
+       scales
 commands = {envpython} setup.py build_ext --inplace
            nosetests --verbosity=2 tests/unit/
