--- a/tox.ini
+++ b/tox.ini
@@ -9,5 +9,6 @@ deps = nose
        pip
        PyYAML
        scales
+       blist
 commands = {envpython} setup.py build_ext --inplace
            nosetests --verbosity=2 tests/unit/
