--- a/tox.ini
+++ b/tox.ini
@@ -12,3 +12,12 @@ deps = nose
        blist
 commands = {envpython} setup.py build_ext --inplace
            nosetests --verbosity=2 tests/unit/
+
+[testenv:pypy]
+deps = nose
+       mock
+       ccm
+       unittest2
+       pip
+       PyYAML
+       scales
