--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ deps = nose
        pip
        PyYAML
        six
+       blist
 commands = {envpython} setup.py build_ext --inplace
            nosetests --verbosity=2 tests/unit/
 
