Add Python3.4 to tox and travis configs

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py26,py27,pypy,py33
+envlist = py26,py27,pypy,py33,py34
 
 [testenv]
 deps = nose
@@ -14,6 +14,17 @@ commands = {envpython} setup.py build_ext --inplace
            nosetests --verbosity=2 tests/unit/
 
 [testenv:py33]
+deps = nose
+       mock
+       pip
+       PyYAML
+       six
+       scales
+       blist
+commands = {envpython} setup.py build_ext --inplace
+           nosetests --verbosity=2 tests/unit/
+
+[testenv:py34]
 deps = nose
        mock
        pip
