--- a/debian/control
+++ b/debian/control
@@ -6,16 +6,16 @@ Build-Depends: python-all-dev (>= 2.6.6-3), python-all-dbg, debhelper (>= 9),
                python-sphinx (>= 1.0.7+dfsg) | python3-sphinx, libev-dev,
                python-concurrent.futures | python-futures, python-setuptools,
                python-nose, python-mock, python-yaml, python-gevent,
-               python-blist, python-tz
+               python-blist, python-tz, python-six (>= 1.6)
 X-Python-Version: >= 2.7
 Standards-Version: 3.9.4
 
 Package: python-cassandra-driver
 Architecture: any
-Depends: ${misc:Depends}, ${python:Depends}, ${shlibs:Depends}, python-blist,
-          python-concurrent.futures | python-futures
+Depends: ${misc:Depends}, ${python:Depends}, ${shlibs:Depends},
+          python-concurrent.futures | python-futures, python-six (>= 1.6)
 Provides: ${python:Provides}
-Recommends: python-scales
+Recommends: python-scales, python-blist
 Suggests: python-cassandra-driver-doc
 Description: Python driver for Apache Cassandra
  This driver works exclusively with the Cassandra Query Language v3 (CQL3)
