--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,20 @@
 language: python
+
+env:
+  - C_VERSION=1.2
+  - C_VERSION=2.0
+
 python:
   - "2.7"
+  - "3.4"
+
 services:
   - cassandra
+
 before_install:
   - sudo sh -c "echo 'JVM_OPTS=\"\${JVM_OPTS} -Djava.net.preferIPv4Stack=false\"' >> /usr/local/cassandra/conf/cassandra-env.sh"
   - sudo service cassandra start
+
 install:
   - "pip install -r requirements.txt --use-mirrors"
     #- "pip install pytest --use-mirrors"
