--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,25 @@
 language: python
 
 env:
-  - C_VERSION=1.2
-  - C_VERSION=2.0
+  - C_VERSION=12
+  - C_VERSION=20
 
 python:
   - "2.7"
   - "3.4"
 
-services:
-  - cassandra
+#services: # removed to try to get before_install to use custom versions
+#  - cassandra
 
 before_install:
+  - echo "deb http://www.apache.org/dist/cassandra/debian ${C_VERSION}x main" > /etc/apt/sources.list.d/cassandra.list
+  - echo "deb-src http://www.apache.org/dist/cassandra/debian ${C_VERSION}x main" >> /etc/apt/sources.list.d/cassandra.list
+  - gpg --keyserver pgp.mit.edu --recv-keys F758CE318D77295D
+  - gpg --export --armor F758CE318D77295D | apt-key add -
+  - gpg --keyserver pgp.mit.edu --recv-keys 2B5C1B00
+  - gpg --export --armor 2B5C1B00 | sudo apt-key add -
+  - apt-get update
+  - apt-get install -y cassandra
   - sudo sh -c "echo 'JVM_OPTS=\"\${JVM_OPTS} -Djava.net.preferIPv4Stack=false\"' >> /usr/local/cassandra/conf/cassandra-env.sh"
   - sudo service cassandra start
 
