tee instead of redire

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ python:
 #  - cassandra
 
 before_install:
-  - sudo echo "deb http://www.apache.org/dist/cassandra/debian ${C_VERSION}x main" >> /etc/apt/sources.list
-  - sudo echo "deb-src http://www.apache.org/dist/cassandra/debian ${C_VERSION}x main" >> /etc/apt/sources.list
+  - sudo echo "deb http://www.apache.org/dist/cassandra/debian ${C_VERSION}x main" | sudo tee -a /etc/apt/sources.list
+  - sudo echo "deb-src http://www.apache.org/dist/cassandra/debian ${C_VERSION}x main" | sudo tee -a /etc/apt/sources.list
   - sudo gpg --keyserver pgp.mit.edu --recv-keys F758CE318D77295D
   - sudo gpg --export --armor F758CE318D77295D | apt-key add -
   - sudo gpg --keyserver pgp.mit.edu --recv-keys 2B5C1B00
