--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,6 @@ python:
   - "2.7"
   - "3.4"
 
-#services: # removed to try to get before_install to use custom versions
-#  - cassandra
-
 before_install:
   - sudo echo "deb http://www.apache.org/dist/cassandra/debian ${C_VERSION}x main" | sudo tee -a /etc/apt/sources.list
   - sudo echo "deb-src http://www.apache.org/dist/cassandra/debian ${C_VERSION}x main" | sudo tee -a /etc/apt/sources.list
@@ -19,16 +16,13 @@ before_install:
   - sudo gpg --keyserver pgp.mit.edu --recv-keys 2B5C1B00
   - sudo gpg --export --armor 2B5C1B00 | sudo apt-key add -
   - sudo apt-get update
-#  - sudo rm /etc/security/limits.d/cassandra.conf # travis apparently already has this file
   - sudo apt-get -o Dpkg::Options::="--force-confnew" install -y cassandra
   - sudo sh -c "echo 'JVM_OPTS=\"\${JVM_OPTS} -Djava.net.preferIPv4Stack=false\"' >> /usr/local/cassandra/conf/cassandra-env.sh"
   - sudo service cassandra start
+  - if [ "$C_VERSION" -le "20" ]; then export CASSANDRA_PROTOCOL_VERSION=1; fi
 
 install:
   - "pip install -r requirements.txt --use-mirrors"
-    #- "pip install pytest --use-mirrors"
 
 script:
-#  - while [ ! -f /var/run/cassandra.pid ] ; do sleep 1 ; done # wait until cassandra is ready, i don't think this is necessary anymore, and it seems to hang
   - "nosetests --no-skip"
-    #  - "py.test cqlengine/tests/"
