--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,16 @@
 language: python
 
 env:
-  - C_VERSION=12
-  - C_VERSION=20
+  - CASSANDRA_VERSION=12
+  - CASSANDRA_VERSION=20
 
 python:
   - "2.7"
   - "3.4"
 
 before_install:
-  - sudo echo "deb http://www.apache.org/dist/cassandra/debian ${C_VERSION}x main" | sudo tee -a /etc/apt/sources.list
-  - sudo echo "deb-src http://www.apache.org/dist/cassandra/debian ${C_VERSION}x main" | sudo tee -a /etc/apt/sources.list
+  - sudo echo "deb http://www.apache.org/dist/cassandra/debian ${CASSANDRA_VERSION}x main" | sudo tee -a /etc/apt/sources.list
+  - sudo echo "deb-src http://www.apache.org/dist/cassandra/debian ${CASSANDRA_VERSION}x main" | sudo tee -a /etc/apt/sources.list
   - sudo gpg --keyserver pgp.mit.edu --recv-keys F758CE318D77295D
   - sudo gpg --export --armor F758CE318D77295D | sudo apt-key add -
   - sudo gpg --keyserver pgp.mit.edu --recv-keys 2B5C1B00
@@ -25,4 +25,4 @@ install:
   - "pip install -r requirements.txt --use-mirrors"
 
 script:
-  - "nosetests --no-skip"
+  - "bin/test.py --no-skip"
