--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ before_install:
   - sudo sh -c "echo 'JVM_OPTS=\"\${JVM_OPTS} -Djava.net.preferIPv4Stack=false\"' >> /etc/cassandra/cassandra-env.sh"
   - sudo service cassandra start
   - ps aux | grep cassandra
+  - sudo cat /var/log/cassandra/output.log
   - cat /etc/cassandra/cassandra-env.sh
   - cat /etc/cassandra/cassandra.yaml
 
