remove old data files which are causing 1.2 build to fail

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,11 @@ before_install:
   - sudo gpg --export --armor 0353B12C | sudo apt-key add -
   - sudo apt-get update
   - sudo apt-get -o Dpkg::Options::="--force-confnew" install -y cassandra
+  - sudo rm -rf /var/lib/cassandra/*
   - sudo sh -c "echo 'JVM_OPTS=\"\${JVM_OPTS} -Djava.net.preferIPv4Stack=false\"' >> /etc/cassandra/cassandra-env.sh"
   - sudo service cassandra start
   - sleep 5
+
   - ps aux | grep cassandra
   - sudo cat /var/log/cassandra/output.log
   - cat /etc/cassandra/cassandra-env.sh
