Integrate cqlengine tests into tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,55 +1,30 @@
 [tox]
 envlist = py26,py27,pypy,py33,py34
 
-[testenv]
+[base]
 deps = nose
        mock
-       ccm
        unittest2
-       pip
        PyYAML
        six
-       blist
-commands = {envpython} setup.py build_ext --inplace
-           nosetests --verbosity=2 tests/unit/
 
-[testenv:py33]
-deps = nose
-       mock
-       pip
-       PyYAML
-       six
-       scales
+[testenv]
+deps = {[base]deps}
        blist
+       sure
+setenv = USE_CASS_EXTERNAL=1
 commands = {envpython} setup.py build_ext --inplace
            nosetests --verbosity=2 tests/unit/
+           nosetests --verbosity=2 tests/integration/cqlengine
 
-[testenv:py34]
-deps = nose
-       mock
-       pip
-       PyYAML
-       six
-       scales
-       blist
+[testenv:py26]
 commands = {envpython} setup.py build_ext --inplace
            nosetests --verbosity=2 tests/unit/
+# no cqlengine support for 2.6 right now
 
 [testenv:pypy]
-deps = nose
-       mock
-       ccm
-       unittest2
-       pip
-       PyYAML
-       scales
-       six
+deps = {[base]deps}
 commands = {envpython} setup.py build_ext --inplace
            nosetests --verbosity=2 tests/unit/
-
-# TODO: integrate cqlengine tests
-#envlist=py27,py34
-#
-#[testenv]
-#deps= -rrequirements.txt
-#commands=bin/test.py --no-skip
+# cqlengine/test_timestamp.py uses sure, which fails in pypy presently
+# could remove sure usage
