--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,20 @@
 language: python
 python: 2.7
 env:
-  - TOX_ENV=py26 CASSANDRA_VERSION=21
-  - TOX_ENV=py27 CASSANDRA_VERSION=12
-  - TOX_ENV=py27 CASSANDRA_VERSION=20
-  - TOX_ENV=py27 CASSANDRA_VERSION=21
-  - TOX_ENV=pypy CASSANDRA_VERSION=21
-  - TOX_ENV=py33 CASSANDRA_VERSION=21
-  - TOX_ENV=py34 CASSANDRA_VERSION=21
+  - TOX_ENV=py26 CASS_VER=21
+  - TOX_ENV=py27 CASS_VER=12
+  - TOX_ENV=py27 CASS_VER=20
+  - TOX_ENV=py27 CASS_VER=21
+  - TOX_ENV=pypy CASS_VER=21
+  - TOX_ENV=py33 CASS_VER=21
+  - TOX_ENV=py34 CASS_VER=21
 
 before_install:
   - sudo apt-get update -y
   - sudo apt-get install -y build-essential python-dev
   - sudo apt-get install -y libev4 libev-dev
-  - sudo echo "deb http://www.apache.org/dist/cassandra/debian ${CASSANDRA_VERSION}x main" | sudo tee -a /etc/apt/sources.list
-  - sudo echo "deb-src http://www.apache.org/dist/cassandra/debian ${CASSANDRA_VERSION}x main" | sudo tee -a /etc/apt/sources.list
+  - sudo echo "deb http://www.apache.org/dist/cassandra/debian ${CASS_VER}x main" | sudo tee -a /etc/apt/sources.list
+  - sudo echo "deb-src http://www.apache.org/dist/cassandra/debian ${CASS_VER}x main" | sudo tee -a /etc/apt/sources.list
   - sudo rm -rf ~/.gnupg
   - sudo gpg --keyserver pgp.mit.edu --recv-keys F758CE318D77295D
   - sudo gpg --export --armor F758CE318D77295D | sudo apt-key add -
