Added tests for custom payloads. Fixed formatting in tracing tests.

--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,8 @@ deps = nose
 
 [testenv]
 deps = {[base]deps}
+       sure==1.2.3
        blist
-       sure
 setenv = USE_CASS_EXTERNAL=1
 commands = {envpython} setup.py build_ext --inplace
            nosetests --verbosity=2 tests/unit/
