--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,6 @@ envlist = py26,py27,pypy,py33,py34
 [base]
 deps = nose
        mock
-       unittest2
        PyYAML
        six
 
@@ -16,6 +15,11 @@ setenv = USE_CASS_EXTERNAL=1
 commands = {envpython} setup.py build_ext --inplace
            nosetests --verbosity=2 tests/unit/
            nosetests --verbosity=2 tests/integration/cqlengine
+
+[testenv:py26]
+deps = {[testenv]deps}
+       unittest2
+# test skipping is different in unittest2 for python 2.7+; let's just use it where needed
 
 [testenv:pypy]
 deps = {[base]deps}
