--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py26,py27,pypy,py33,py34
+envlist = py26,py27,pypy,py33,py34,pypy3
 
 [base]
 deps = nose
@@ -25,5 +25,11 @@ deps = {[testenv]deps}
 deps = {[base]deps}
 commands = {envpython} setup.py build_ext --inplace
            nosetests --verbosity=2 tests/unit/
+
+[testenv:pypy3]
+deps = {[base]deps}
+commands = {envpython} setup.py build_ext --inplace
+           nosetests --verbosity=2 tests/unit/
+
 # cqlengine/test_timestamp.py uses sure, which fails in pypy presently
 # could remove sure usage
