Enable C extensions on pypy and add pypy3 support
Conflicts:
	tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{26,27,33,34},pypy
+envlist = py{26,27,33,34},pypy,pypy3
 
 [base]
 deps = nose
@@ -20,6 +20,13 @@ commands = nosetests --verbosity=2 --no-path-adjustment {toxinidir}/tests/unit/
 
 [testenv:pypy]
 deps = {[base]deps}
-commands = nosetests --verbosity=2 {toxinidir}/tests/unit/
+commands = {envpython} setup.py build_ext --inplace
+           nosetests --verbosity=2 tests/unit/
+
+[testenv:pypy3]
+deps = {[base]deps}
+commands = {envpython} setup.py build_ext --inplace
+           nosetests --verbosity=2 tests/unit/
+
 # cqlengine/test_timestamp.py uses sure, which fails in pypy presently
 # could remove sure usage
