Adding timer tests for async, libev, and twisted. Added integration tests. All for PYTHON-108

--- a/tox.ini
+++ b/tox.ini
@@ -7,10 +7,12 @@ deps = nose
        PyYAML
        six
 
+
 [testenv]
 deps = {[base]deps}
-       sure==1.2.3
+       sure
        blist
+
 setenv = USE_CASS_EXTERNAL=1
 commands = {envpython} setup.py build_ext --inplace
            nosetests --verbosity=2 tests/unit/
@@ -19,7 +21,16 @@ commands = {envpython} setup.py build_ext --inplace
 [testenv:py26]
 deps = {[testenv]deps}
        unittest2
+       twisted
+       eventlet
+       gevent
 # test skipping is different in unittest2 for python 2.7+; let's just use it where needed
+
+[testenv:py27]
+deps = {[testenv]deps}
+       twisted
+       eventlet
+       gevent
 
 [testenv:pypy]
 deps = {[base]deps}
