--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py26,py27,pypy,py33,py34
+envlist = py{26,27,33,34},pypy
 
 [base]
 deps = nose
@@ -11,19 +11,15 @@ deps = nose
 deps = {[base]deps}
        sure==1.2.3
        blist
+       {env:CYTHON_DEP:}
+       py26: unittest2
 setenv = USE_CASS_EXTERNAL=1
-commands = {envpython} setup.py build_ext --inplace
-           nosetests --verbosity=2 tests/unit/
-           nosetests --verbosity=2 tests/integration/cqlengine
-
-[testenv:py26]
-deps = {[testenv]deps}
-       unittest2
-# test skipping is different in unittest2 for python 2.7+; let's just use it where needed
+changedir = {envtmpdir}
+commands = nosetests --verbosity=2 --no-path-adjustment {toxinidir}/tests/unit/
+           nosetests --verbosity=2 --no-path-adjustment {toxinidir}/tests/integration/cqlengine
 
 [testenv:pypy]
 deps = {[base]deps}
-commands = {envpython} setup.py build_ext --inplace
-           nosetests --verbosity=2 tests/unit/
+commands = nosetests --verbosity=2 {toxinidir}/tests/unit/
 # cqlengine/test_timestamp.py uses sure, which fails in pypy presently
 # could remove sure usage
