Make tox pypy commands use absolute path to unit tests
follows from new setdir

--- a/tox.ini
+++ b/tox.ini
@@ -20,13 +20,11 @@ commands = nosetests --verbosity=2 --no-path-adjustment {toxinidir}/tests/unit/
 
 [testenv:pypy]
 deps = {[base]deps}
-commands = {envpython} setup.py build_ext --inplace
-           nosetests --verbosity=2 tests/unit/
+commands = nosetests --verbosity=2 {toxinidir}/tests/unit/
 
 [testenv:pypy3]
 deps = {[base]deps}
-commands = {envpython} setup.py build_ext --inplace
-           nosetests --verbosity=2 tests/unit/
+commands = nosetests --verbosity=2 {toxinidir}/tests/unit/
 
 # cqlengine/test_timestamp.py uses sure, which fails in pypy presently
 # could remove sure usage
