don't build embedded extensions for gevent in tox
config was failing on these for some reason

also, not bothering with eventlet dep since it can't run without monkey
patching

--- a/tox.ini
+++ b/tox.ini
@@ -13,10 +13,11 @@ deps = {[base]deps}
        blist
        {env:CYTHON_DEP:}
        py26: unittest2
-       py{26,27}: twisted
-       py{26,27}: eventlet
        py{26,27}: gevent
+       twisted
 setenv = USE_CASS_EXTERNAL=1
+         LIBEV_EMBED=0
+         CARES_EMBED=0
 changedir = {envtmpdir}
 commands = nosetests --verbosity=2 --no-path-adjustment {toxinidir}/tests/unit/
            nosetests --verbosity=2 --no-path-adjustment {toxinidir}/tests/integration/cqlengine
