pyximport for test helper cython extensions
Allows cython extension to be built for unit tests without having it in
the setup.

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ deps = nose
 deps = {[base]deps}
        sure
        blist
+       cython
        py26: unittest2
        py{26,27}: gevent
        twisted
