travis-ci: Switch CYTHON_DEP tox env for setup env var

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,18 @@
 language: python
 python: 2.7
 env:
+  - TOX_ENV=py26 CASS_VER=21 CASS_DRIVER_NO_CYTHON=1
   - TOX_ENV=py26 CASS_VER=21
-  - TOX_ENV=py26 CASS_VER=21 CYTHON_DEP=cython
-  - TOX_ENV=py27 CASS_VER=12
-  - TOX_ENV=py27 CASS_VER=20
+  - TOX_ENV=py27 CASS_VER=12 CASS_DRIVER_NO_CYTHON=1
+  - TOX_ENV=py27 CASS_VER=20 CASS_DRIVER_NO_CYTHON=1
+  - TOX_ENV=py27 CASS_VER=21 CASS_DRIVER_NO_CYTHON=1
   - TOX_ENV=py27 CASS_VER=21
-  - TOX_ENV=py27 CASS_VER=21 CYTHON_DEP=cython
+  - TOX_ENV=py33 CASS_VER=21 CASS_DRIVER_NO_CYTHON=1
   - TOX_ENV=py33 CASS_VER=21
-  - TOX_ENV=py33 CASS_VER=21 CYTHON_DEP=cython
+  - TOX_ENV=py34 CASS_VER=21 CASS_DRIVER_NO_CYTHON=1
   - TOX_ENV=py34 CASS_VER=21
-  - TOX_ENV=py34 CASS_VER=21 CYTHON_DEP=cython
-  - TOX_ENV=pypy CASS_VER=21
-  - TOX_ENV=pypy3 CASS_VER=21
+  - TOX_ENV=pypy CASS_VER=21 CASS_DRIVER_NO_CYTHON=1
+  - TOX_ENV=pypy3 CASS_VER=21 CASS_DRIVER_NO_CYTHON=1
 
 before_install:
   - sudo apt-get update -y
