ignore generated test artifact

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ setuptools*.egg
 cassandra/*.c
 !cassandra/cmurmur3.c
 cassandra/*.html
+tests/unit/cython/bytesio_testhelper.c
 
 # OSX
 .DS_Store
