--- a/build.yaml
+++ b/build.yaml
@@ -4,9 +4,11 @@ python:
 os:
   - ubuntu/trusty64
 cassandra:
+  - 1.2
   - 2.0
   - 2.1
   - 2.2
+  - 3.0
 env:
   EVENT_LOOP_MANAGER:
     - libev
@@ -41,5 +43,7 @@ build:
       echo "==========RUNNING INTEGRATION TESTS=========="
       CASSANDRA_VERSION=$CCM_CASSANDRA_VERSION nosetests -s -v --logging-format="[%(levelname)s] %(asctime)s %(thread)d: %(message)s" --with-ignore-docstrings --with-xunit --xunit-file=standard_results.xml tests/integration/standard/ || true
 
+      echo "==========RUNNING LONG INTEGRATION TESTS=========="
+      CASSANDRA_VERSION=$CCM_CASSANDRA_VERSION nosetests -s -v --logging-format="[%(levelname)s] %(asctime)s %(thread)d: %(message)s" --with-ignore-docstrings --with-xunit --xunit-file=long_results.xml tests/integration/long/ || true
   - xunit:
     - "*_results.xml"
