Twisted gave up on Python 2.6 and 3.3. Lock down for testing

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ deps = {[base]deps}
        cython
        py26: unittest2
        py{26,27}: gevent
-       twisted
+       twisted <15.5.0
 setenv = LIBEV_EMBED=0
          CARES_EMBED=0
 changedir = {envtmpdir}
