--- a/docs.yaml
+++ b/docs.yaml
@@ -7,7 +7,9 @@ sections:
     type: sphinx
     directory: docs
 versions:
+  - name: 3.6.0
+    ref: 3.6-doc
   - name: 3.5.0
-    ref: 3.5.0
-redirects:
-  - \A\/(.*)/\Z: /\1.html
+    ref: 3.5-doc
+-redirects:
+-  - \A\/(.*)/\Z: /\1.html
